--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v5
       with:
-        context: .
+        context: ./backend
         file: ./Dockerfile
         push: true
         tags: ${{ env.REGISTRY }}/${{ env.REPO }}:latest 
