bug: fix deployment on branch main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Go CI
 
 on:
   push:
-    branches: [ "feature/dev-ops" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "feature/dev-ops" ]
+    branches: [ "main" ]
 
 env:
   REGISTRY: ghcr.io
